# cs_notes

./: .gitignore  README.md  SUMMARY.md  _sidebar.md  index.html  search_index.json
code/c++/: bfp16.cpp  class.cpp  constructor.cpp  container.cpp  function_bind.cpp  mem_zone.cpp  stl.cpp  stringstream.cpp  template.cpp  test_glog.cpp  test_string.cpp  variadic_template.cpp  xmake.lua
code/linux/: Readme.MD  shmread.c  shmwrite.c  socketclient.c  socketserver.c
code/python/: numpy.py  test_einsum.py  test_imglib.py  test_numpy.py  test_zmq_client.py  test_zmq_server.py
code/rust/: Cargo.toml
code/typescript/: module_export.ts  module_import.ts  module_test.ts  package-lock.json  thirdparty.d.ts  thirdparty.js  thirdparty_test.ts  ts_grammar_basic.ts  tsconfig.json
demos/cpp/: test_fwd.cpp  test_pod.cpp  test_spdlog.cpp  test_tpl_metaprog.cpp  test_zmq.cpp
demos/onnx/: basic.ipynb
demos/python/: np_op.py  test_decro.py  test_docs.ipynb  test_drawing.ipynb  test_graphviz.py  test_logging.py  test_rich.ipynb
demos/tvm/: basic.ipynb
ml/: Bert-GLUE_OnnxRuntime_quantization.ipynb  beam_search_decoder.py
notes/: a.sh
notes/algorithm/: algo-example.md  algorithm-by-examples.html  algorithm-by-examples.md  bert.md  lockfree-queue.md
notes/lang/: lang_cpp.html  lang_cpp.md  lang_cpp_guidelines.md  lang_cpp_q&a.html  lang_cpp_q&a.md  lang_js.html  lang_js.md  lang_js_es6.md  lang_python.html  lang_python.md  (+3 more)
notes/tools/cmake/: CMakeLists.txt  mymathConfig.h.in
notes/tools/cmake/math/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
notes/tools/cmake/src/: main.cpp
(+50 files in other folders)
